--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "description": "A list of Vuelidate validators that are consistent with the Deposits schema and contains a lot of other validators used internally across several Deposits products.",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test"
+    "test": "jest"
   },
+  "type": "module",
   "keywords": [
     "Deposits",
     "validators",
     "vuelidate"
   ],
-  "author": "Deposits"
+  "author": "Deposits",
+  "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5"
+  },
+  "homepage": "https://github.com/DepositsTeam/validators",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DepositsTeam/validators"
+  }
 }
