--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@babel/cli": "^7.25.7",
     "@babel/core": "^7.25.7",
     "@babel/preset-env": "^7.25.7",
+    "@eslint/js": "^9.11.1",
     "@jest/globals": "^29.7.0",
     "core-js": "^3.38.1",
+    "eslint": "^9.11.1",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.10.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "prettier": "^3.2.5"
