--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "prepare": "husky"
+    "prepare": "husky",
+    "build": "rm -rf dist && rollup --config rollup.config.js"
   },
   "type": "module",
   "keywords": [
@@ -20,13 +21,18 @@
     "@babel/preset-env": "^7.25.7",
     "@eslint/js": "^9.11.1",
     "@jest/globals": "^29.7.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-terser": "^0.4.4",
     "core-js": "^3.38.1",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.10.0",
     "husky": "^9.1.6",
+    "i": "^0.3.7",
     "jest": "^29.7.0",
-    "prettier": "^3.2.5"
+    "npm": "^10.8.3",
+    "prettier": "^3.2.5",
+    "rollup": "^4.24.0"
   },
   "homepage": "https://github.com/DepositsTeam/validators",
   "repository": {
