--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@deposits/validators",
-  "version": "0.0.6",
+  "version": "0.0.8",
   "description": "A collection of Fintech-specific and general-purpose validators, designed to extend popular validation libraries like Vuelidate, Zod, and yup.",
   "main": "dist/index.js",
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "require": "./dist/index.umd.js"
+      "require": "./dist/index.cjs"
     }
   },
   "scripts": {
